Update index.html: Align "About Me" heading and add line breaks

--- a/styles/main.css
+++ b/styles/main.css
@@ -39,6 +39,10 @@ body.dark-mode {
     background-color: var(--background-color-dark);
 }
 
+#about-me h2 {
+    text-align: center;
+  }
+
 /* Header styles */
 .header-class {
     display: flex;
