--- a/styles/main.css
+++ b/styles/main.css
@@ -174,14 +174,17 @@ body.dark-mode .width-wrap {
     text-align: center;
   }
 
-#about-me img {
-    #about-me .profile-pic {
-        width: 300px;
-        height: 400px;
-        align-items: center;
-        object-fit: cover;
-      }
-    }
+#about-me {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#about-me .profile-pic {
+  width: 300px;
+  height: 450px;
+  object-fit: cover;
+}
 
 .main-class {
     padding: 20px;
