--- a/styles/main.css
+++ b/styles/main.css
@@ -175,7 +175,7 @@ body.dark-mode .width-wrap {
   }
 
 #about-me img {
-    display: center;
+    margin-left: 305px;
 }
 .main-class {
     padding: 20px;
