--- a/styles/main.css
+++ b/styles/main.css
@@ -261,3 +261,83 @@ body.dark-mode code {
         justify-content: center;
     }
 }
+
+#contact-me {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #333333; /* Dark background for light mode */
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: #ffffff; /* White text color for dark background */
+}
+
+body.dark-mode #contact-me {
+    background-color: #ffffff; /* Light background for dark mode */
+    color: #000000; /* Black text color for light background */
+}
+
+#contact-me h3 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#contact-me .contact-details {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#contact-me .contact-details p {
+    margin: 5px 0;
+}
+
+#contact-me .contact-details a {
+    color: #0073e6;
+    text-decoration: none;
+}
+
+body.dark-mode #contact-me .contact-details a {
+    color: #09e1ec; /* Dark mode link color */
+}
+
+#contact-me .contact-details a:hover {
+    text-decoration: underline;
+}
+
+#contact-me .contact-form {
+    display: flex;
+    flex-direction: column;
+}
+
+#contact-me .contact-form label {
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+#contact-me .contact-form input,
+#contact-me .contact-form textarea {
+    margin-bottom: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+body.dark-mode #contact-me .contact-form input,
+body.dark-mode #contact-me .contact-form textarea {
+    background-color: #f9f9f9; /* Light background for dark mode */
+    color: #000000; /* Black text color for light background */
+    border: 1px solid #777777; /* Dark mode input border */
+}
+
+#contact-me .contact-form button {
+    padding: 10px 15px;
+    background-color: #0073e6;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#contact-me .contact-form button:hover {
+    background-color: #005bb5;
+}
