--- a/styles/main.css
+++ b/styles/main.css
@@ -262,6 +262,26 @@ body.dark-mode code {
     }
 }
 
+#back-to-top {
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: #000; 
+    color: white; 
+    cursor: pointer; 
+    padding: 15px; 
+    border-radius: 10px; 
+    font-size: 18px; 
+}
+
+#back-to-top:hover {
+    background-color: #555; 
+}
+
 #contact-me {
     max-width: 600px;
     margin: 0 auto;
