--- a/styles/main.css
+++ b/styles/main.css
@@ -361,3 +361,63 @@ body.dark-mode #contact-me .contact-form textarea {
 #contact-me .contact-form button:hover {
     background-color: #005bb5;
 }
+
+/* Tab button styles */
+.tab {
+    overflow: hidden;
+    background-color: var(--header-footer-color-light);
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+body.dark-mode .tab {
+    background-color: var(--header-footer-color-dark);
+}
+
+.tab button {
+    background-color: inherit;
+    color: var(--text-color-light);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+
+body.dark-mode .tab button {
+    color: #000; /* Set text color to black in dark mode */
+}
+
+.tab button:hover {
+    background-color: #ddd;
+}
+
+body.dark-mode .tab button:hover {
+    background-color: #555;
+}
+
+.tab button.active {
+    background-color: #ccc;
+    color: #fff; /* Set text color to white when active */
+}
+
+body.dark-mode .tab button.active {
+    background-color: #777;
+    color: #fff; /* Set text color to white when active in dark mode */
+}
+
+/* Tab content styles */
+.tabcontent {
+    display: none;
+    padding: 20px;
+    border-top: none;
+    background-color: var(--background-color-light);
+    color: var(--text-color-light);
+}
+
+body.dark-mode .tabcontent {
+    background-color: var(--background-color-dark);
+    color: var(--text-color-dark);
+}
