--- a/styles/main.css
+++ b/styles/main.css
@@ -195,13 +195,16 @@ body.dark-mode .main-class {
     background-color: var(--background-color-dark);
 }
 
+
 /* Footer styles */
 .footer-class {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
+    padding: 10px 20px;
     width: 100%;
+    display: flex;
+    height: 40px;
+    justify-content: space-between;
+    align-items: center;
+    /* box-sizing: border-box; */
 }
 
 body.dark-mode .footer-class {
@@ -209,34 +212,36 @@ body.dark-mode .footer-class {
     color: var(--text-color-dark-foot);
 }
 
-.foot {
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
-    text-align: center;
+    max-width: 960px;
+    margin: 0 auto;
 }
 
-footer hr {
-    width: calc(50vw - 300px);
-    max-width: 890px;
-    margin-top: 3em;
-    margin-bottom: 2em;
-    border: none;
-    border-bottom: 3px dotted #da0a0a;
+.footer-content p {
+    margin: 0;
 }
 
-/* Light mode code block styles (VS Code dark theme) */
-code {
-    background-color: #1E1E1E; /* VS Code dark background color */
-    color: #D4D4D4; /* VS Code light text color */
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 2px 4px;
-    font-family: monospace;
+.social-icons {
+    display: flex;
+    gap: 15px;
+    margin-left: auto; /* Align to the right */
 }
 
-/* Dark mode code block styles (VS Code light theme) */
-body.dark-mode code {
-    background-color: #FCFCFC; /* VS Code light background color */
-    color: #333333; /* VS Code dark text color */
+.social-icons img {
+    height: 21px;
+    width: auto; /* Maintain aspect ratio */
+}
+
+.github-icon {
+    filter: invert(100%);
+}
+
+body.dark-mode .github-icon {
+    filter: invert(0%);
 }
 
 /* Mobile styles */
