--- a/styles/main.css
+++ b/styles/main.css
@@ -198,6 +198,8 @@ body.dark-mode .main-class {
 
 /* Footer styles */
 .footer-class {
+    background-color: #333;
+    color: #fff;
     padding: 10px 20px;
     width: 100%;
     display: flex;
