Update portfolio.html and main.css

--- a/styles/main.css
+++ b/styles/main.css
@@ -427,3 +427,7 @@ body.dark-mode .tabcontent {
     background-color: var(--background-color-dark);
     color: var(--text-color-dark);
 }
+
+#split {
+    text-align: center;
+}
