--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-/* Global styles */
 :root {
     --text-color-light: #000000;
     --background-color-light: #ffffff;
@@ -170,6 +169,7 @@ body.dark-mode .width-wrap {
 }
 
 /* Main content styles */
+
 #about-me {
     display: grid;
     justify-items: center;
@@ -182,7 +182,8 @@ body.dark-mode .width-wrap {
 
 #about-me h3 {
     text-align: center;
-}
+  }
+
 
 .main-class {
     padding: 20px;
@@ -193,6 +194,7 @@ body.dark-mode .width-wrap {
 body.dark-mode .main-class {
     background-color: var(--background-color-dark);
 }
+
 
 /* Footer styles */
 .footer-class {
@@ -259,7 +261,63 @@ body.dark-mode code {
     color: #333333; /* VS Code dark text color */
 }
 
-/* Back to top button */
+/* Mobile styles */
+@media (max-width: 768px) {
+    .header-class {
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .title-div {
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .nav-class {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .nav-class li {
+        margin: 10px 0;
+    }
+
+    .width-wrap {
+        padding: 0 1em;
+    }
+
+    .footer-class {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .footer-content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .social-icons {
+        margin-top: 10px;
+    }
+
+    #back-to-top {
+        position: fixed;
+        bottom: 70px; /* Adjusted to ensure it doesn't overlap with the footer */
+        right: 30px;
+    }
+}
+
+/* Tablet styles */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .nav-class {
+        justify-content: center;
+    }
+}
+
 #back-to-top {
     display: none; 
     position: fixed; 
@@ -280,7 +338,6 @@ body.dark-mode code {
     background-color: #555; 
 }
 
-/* Contact me section */
 #contact-me {
     max-width: 600px;
     margin: 0 auto;
